# Scrabble-Game.ai

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  boardTest.vcxproj  boardTest.vcxproj.filters
docs/: Final-Report-Template.docx  MI-Final-Report-Template.docx  MI.docx  Team Structure.docx  dummytext.txt  mi-format.docx  ~$am Structure.docx  ~$nal-Report-Template.docx
gui/: Assembly-CSharp.csproj  packages.config
gui/Assets/: BestMoveBoard.cs  player1Score.cs  player1Time.cs  player2Score.cs  player2Time.cs
gui/Assets/Animation/: BeginGame.anim  EndGame.anim  EndGamePlayAgain.anim  ExitPanel.controller  MainMenuPanel.controller  PlayAgainPanel.controller  SceneAnimation.anim  Welcomepanel.controller
gui/Assets/Materials/: DoubleLetterMat.mat  DoubleWordMat.mat  EmptyTile.mat  TribleLetterMat.mat  TribleWordMat.mat
gui/Assets/Prefabs/: Button.prefab  Slot.prefab  TileA.prefab  TileB.prefab  TileBlank.prefab  TileC.prefab  TileD.prefab  TileE.prefab  TileF.prefab  TileG.prefab  TileH.prefab  TileHighlight.prefab  TileI.prefab  TileJ.prefab  TileK.prefab  TileL.prefab  TileM.prefab  TileN.prefab  TileO.prefab  TileP.prefab  TileQ.prefab  TileR.prefab  TileS.prefab  TileT.prefab  TileU.prefab  TileV.prefab  TileW.prefab  TileX.prefab  TileY.prefab  TileZ.prefab
gui/Assets/Scenes/: End menu.unity  Game.unity  Starting Menu.unity
gui/Assets/Scripts/: BlankTile.cs  Board.cs  ChallengeButton.cs  ChooseBlankTile.cs  CountdownTimer.cs  Draggable.cs  GameManager.cs  MainMenu.cs  OkButton.cs  PanelTransition.cs  PanelTransitionBegin.cs  PassButton.cs  Rack.cs  RandomButton.cs  SceneTransitionBegin.cs  SceneTransitionComplete.cs  ServerIn.cs  ServerOut.cs  Slot.cs  SubmitButton.cs  Suggestion.cs  Tile.cs  TileSelector.cs  TransitionComplete.cs  UpdatePlayerTimer.cs
gui/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
gui/Temp/: UnityTempFile-0d0bfacd7c91e7b43ba8193b54233ebb  UnityTempFile-80552262b22ccbc43936cb8564d68b10  UnityTempFile-9498d3f6bd610bc4c8e71ab304987e6f  UnityTempFile-c34d9edc8acfdc7409c36861e6c05c06  UnityTempFile-c54803f52fd030a42bd57cb7ba2cc5d7  UnityTempFile-cd037c6d87ac1ec4da54bbcd7286a0d9  UnityTempFile-d874a7ea770fb454b8e7a649c6b6c54f
gui/Temp/__Backupscenes/: 0.backup
src/: AI_MODE.cpp  AI_MODE.h  AI_MODE.hpp  Brain.cpp  Brain.hpp  Definitions.hpp  Gaddag.h  IsA.vcxproj  IsA.vcxproj.filters  Letter.h  LoadGaddag.cpp  LoadGaddag.h  LoadNode.cpp  LoadNode.h  Trainer2.vcxproj  Trainer2.vcxproj.filters  main.cpp  trainerMode.vcxproj
src/AIInterface/: AIInterface.hpp
src/AI_MODE/: AI_MODE.cpp  AI_MODE.hpp
src/AI_Mode/: AI_MODE.cpp  AI_MODE.h
src/Board/Board_and_tiles/: Board_and_tiles.sln
src/Board/Board_and_tiles/Board_and_tiles/: Board.cpp  Board.h  Board.hpp  BoardCommunication.cpp  BoardCommunication.h  BoardCommunication.hpp  BoardConst.h  BoardConst.hpp  BoardMask.cpp  BoardMask.h  Board_and_tiles.vcxproj  Board_and_tiles.vcxproj.filters  Tiles.cpp  Tiles.h  main.cpp  out
src/Board/Board_and_tiles/Debug/: Board_and_tiles.exp  Board_and_tiles.ilk
src/Communication/: BinaryEnvelope.cpp  BinaryEnvelope.hpp  CommStruct.cpp  CommStructs.hpp  ScrabbleClient.cpp
src/GuiInterface/: GuiInterface.hpp
src/MoveGeneration/: Dict.txt  Gaddag.cpp  Gaddag.h  LoadGaddag.cpp  LoadGaddag.h  LoadGaddag.hpp  LoadNode.cpp  LoadNode.h  LoadNode.hpp  MoveGenerate.cpp  MoveGenerate.h  MoveGenerate.hpp  TestGaddag.cpp
src/Opponent-Rack-Generator/: InstallingBoostLibrary.md  Opponent.cpp  Opponent.h
src/ScoreEvaluation/: Evaluator.cpp  Evaluator.hpp  LoadHeuristics.cpp  LoadHeuristics.hpp  RackLeaveEvaluator.cpp  RackLeaveEvaluator.hpp  VCValueEvaluator.cpp  VCValueEvaluator.hpp
src/ScoreEvaluation/Heuristics/: Synergy.txt  VCPlace.txt  Worths.txt
src/SharedClasses/: Board.cpp  Board.hpp  BoardCommunicator.cpp  BoardCommunicator.hpp  CommInfo.hpp  Game_Evaluator.cpp  Game_Evaluator.hpp  Logger.cpp  Logger.hpp  MCTSearch.cpp  MCTSearch.h  MCTSearch.hpp  MCTreeNode.cpp  MCTreeNode.h  MCTreeNode.hpp  Move.cpp  Move.h  Move.hpp  Options.cpp  Options.hpp  TrainerComm.cpp  TrainerComm.hpp
src/StrategyPhase/: StrategyManager.hpp
src/TrainerMode/: AIHuman.hpp  AI_AI.cpp  AI_AI.hpp  AI_Human.cpp  AI_Human.hpp  RackOfTiles.cpp  RackOfTiles.hpp  Timer.cpp  Timer.hpp  Trainer.cpp  Trainer.hpp
src/TryReceive/: ReceiveAndSend.cpp  TryReceive.vcxproj  TryReceive.vcxproj.filters
src/x64/Release/IsA.tlog/: CL.command.1.tlog  CL.read.1.tlog  (+2 more)
(+9 files in other folders)
